code cleaned to build